crud question updated

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -577,7 +577,7 @@ body {
 #loader .rinkin_coffee span {
   display: inline-block;
   position: static;
-  color: #313131;
+  color: #a9f8d2;
 }
 
 #loader .rinkin_coffee span.rinkin {
