--- a/frontend/src/Components/Layouts/FH.css
+++ b/frontend/src/Components/Layouts/FH.css
@@ -1,7 +1,7 @@
 .JsonFooter
 {
-    background-color: #A97155;
-    color: #FAF8F1;
+    background-color: #9cc255;
+    color: #0e0e0e;
     padding: 1px 0;
 
 }
@@ -16,13 +16,6 @@ font-family: Roboto, Arial, Helvetica, sans-serif;
     font-weight: 700;
     font-family: monospace;
 }
-.JsonHeader
-{
-    background-color: #A97155;
-    color: #FAF8F1;
-    
-
-}
 
 .Json-BTN
 {
@@ -32,37 +25,6 @@ font-family: Roboto, Arial, Helvetica, sans-serif;
     font-family: 'Hammersmith One', sans-serif !important;
     border:  2px solid   #978671;
 }
-
-.Json-Login-Form
-{
-    background-color: #E4D1B9 !important;
-    font-family: Roboto, Arial, Helvetica, sans-serif;
-    color:#A97155 !important;
-}
-
-.Json-Login-BTN
-{
-    font-family: Roboto, Arial, Helvetica, sans-serif;
-    background-color:#A97155 !important;
-    color: #FAF8F1 !important;
-
-}
-
-.Json-Register-Form
-{
-    background-color: #E4D1B9 !important;
-    font-family: Roboto, Arial, Helvetica, sans-serif;
-    color:#A97155 !important;
-}
-
-.Json-Register-BTN
-{
-    font-family: Roboto, Arial, Helvetica, sans-serif;
-    background-color:#A97155 !important;
-    color: #FAF8F1 !important;
-
-}
-
 
 
 
