--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -66,7 +66,7 @@ body {
   font-weight: 700;
   padding: 1px;
   background: -webkit-linear-gradient(to right, #f0d175, #ebb585);
-  background: linear-gradient(to right, #eae4cf, #ebb585);
+  background: linear-gradient(to right, #eae4cf, #a9f8a1);
   height: 70vh; /* Cover the entire viewport height */
 }
 .wrapper form {
@@ -94,7 +94,7 @@ body {
   font-weight: 700;
   padding: 10px;
   background: -webkit-linear-gradient(to right, #f0d175, #ebb585);
-  background: linear-gradient(to right, #eae4cf, #ebb585);
+  background: linear-gradient(to right, #eae4cf, #b2f69a);
   height: 80vh; /* Cover the entire viewport height */
 }
 .update-profile-bg form {
@@ -136,7 +136,7 @@ body {
   font-family: "Montserrat", sans-serif;
   background: #f2994a;
   background: -webkit-linear-gradient(to right, #f0d175, #ebb585);
-  background: linear-gradient(to right, #eae4cf, #ebb585);
+  background: linear-gradient(to right, #eae4cf, #9fef97);
   padding: 60px;
   color: #000; /* Font color set to black */
 }
