--- a/frontend/src/Components/Layouts/FH.css
+++ b/frontend/src/Components/Layouts/FH.css
@@ -20,10 +20,10 @@ font-family: Roboto, Arial, Helvetica, sans-serif;
 .Json-BTN
 {
 
-    background-color: #E4D1B9 !important;
-    color:#8e5f47 !important;
+    background-color: #d8f8b8 !important;
+    color:#000000 !important;
     font-family: 'Hammersmith One', sans-serif !important;
-    border:  2px solid   #978671;
+    border:  2px solid   #369a14;
 }
 
 
