--- a/frontend/src/Components/recentpost.css
+++ b/frontend/src/Components/recentpost.css
@@ -10,7 +10,7 @@
 /* Adjust width of the post container */
 .post-scroll {
     max-height: 90vh;
-    max-width: 800vh; /* Adjust height as needed */
+    max-width: 800px; /* Adjust height as needed */
     overflow-y: auto;
 }
 
