--- a/frontend/src/Components/post.css
+++ b/frontend/src/Components/post.css
@@ -140,28 +140,26 @@
     border-radius: 4px;
 }
 
-.comment {
+/* .comment {
     padding: 3px;
     background-color: #f9f9f9;
-    border-radius: 4px;
+    border-radius: 10px;
     border: 1px solid #ccc;
-    margin-bottom: 5px;
+    margin-bottom: 3px;
+} */
+.comment {
+    margin-bottom: 20px;
 }
+
+.gradient-custom {
+    background: linear-gradient(to right, #b5f19f, #f6ffb4);
+}
+
 
 .comment-author {
     font-weight: bold;
     text-align: left;
-}
-
-.author-avatar {
-    width: 40px;
-    /* Adjust size as needed */
-    height: 40px;
-    /* Adjust size as needed */
-    border-radius: 50%;
-    /* Make it round */
-    margin-right: 10px;
-    /* Adjust spacing */
+    font-size: 25px;
 }
 
 .comment-date {
@@ -170,11 +168,12 @@
 }
 
 .comments-list {
-    margin-top: 20px;
+    margin-top: 15px;
 }
 
 .comments-list .comment {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+    font-size: 30px;
 }
 
 .replies-list {
@@ -191,4 +190,95 @@
     background-color: #f0f0f0;
     border-radius: 4px;
     border: 1px solid #ccc;
+}
+
+/* .comment-section textarea {
+    width: calc(95% - 100px); 
+    margin-bottom: 10px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+} */
+.comment-section {
+    margin-top: 20px;
+}
+
+.comment-textarea {
+    width: calc(100% - 120px);
+    margin-bottom: 10px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+    font-size: 16px;
+}
+
+.comment-section button {
+    padding: 8px 16px;
+    border: none;
+    background-color: #007bff;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.comment-section button:hover {
+    background-color: #0056b3;
+}
+
+/* .author-avatar {
+    width: 50px; 
+    height: 50px; 
+    border-radius: 50%; 
+    margin-right: 10px; 
+} */
+
+.author-avatar {
+    width: 65px;
+    height: 65px;
+}
+
+.small {
+    font-size: 20px;
+}
+
+.smallrep {
+    font-size: 40px;
+}
+
+/* Add this CSS to your stylesheet */
+.modal {
+    /* display: none; Initially hide the modal */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
