--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,7 @@
 html,
 body {
   font-family: 'Hammersmith One', sans-serif;
-  color: #b38269;
+  color: #000000b1;
   width: 100%;
   height: 100%;
   margin: 0px;
