--- a/frontend/src/Banner.css
+++ b/frontend/src/Banner.css
@@ -5,13 +5,29 @@
   display: flex;
   justify-content: center; /* Center the content horizontally */
   align-items: center; /* Center the content vertically */
-  margin: 10px auto; /* Add margin to position it below the header */
+  /* margin: 10px auto; Add margin to position it below the header */
 }
 
 .image-on-banner {
   width: 100%; /* Allow the image to adjust its width */
   height: 100%; /* Make the image fill the container vertically */
   object-fit: fill; /* Scale the image as large as possible without stretching */
+}
+
+.carousel-item {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel-indicators {
+  bottom: 10px; /* Adjust the position as needed */
 }
 
 @keyframes firefly {
