--- a/frontend/src/Components/survey.css
+++ b/frontend/src/Components/survey.css
@@ -86,9 +86,19 @@ body {
   }
   
   .submit-button {
-    margin-top: 50px;
+    background-color: #4CAF50;
+    color: white;
+    padding: 15px 30px; /* Adjusted padding for larger button size */
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
   }
   
+  .submit-button:hover {
+    background-color: #92a045;
+  }
+
   .submit-button-container {
     display: flex;
     justify-content: center;
