--- a/frontend/src/Components/Admin/dashboard.css
+++ b/frontend/src/Components/Admin/dashboard.css
@@ -17,3 +17,13 @@
     justify-content: center;
     margin-top: 20px;
   }
+  .chart-container {
+    border: 2px solid green;
+    border-radius: 10px;
+    padding: 20px;
+  }
+  
+  .chart-container:hover {
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  }
+  
