--- a/frontend/src/Components/survey.css
+++ b/frontend/src/Components/survey.css
@@ -12,7 +12,7 @@ body {
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(193, 242, 137, 0.1);
   }
   
   .form-title {
@@ -73,28 +73,42 @@ body {
   }
   
   
-  
   .question-container {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+  }
+  
+  .question-text {
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    color: #333;
+    text-align: justify; /* Justify the question text */
+  }
+  select {
+    width: 100%; /* Make the select element fill its container */
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+    font-size: 16px;
+    color: #333;
+    font-weight: bold; /* Make the font bold */
+  }
+  
+  .submit-button-container {
+    display: flex;
+    justify-content: center;
   }
   
   .submit-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 15px 30px; /* Adjusted padding for larger button size */
+    font-family: 'Helvetica Neue', Arial, sans-serif;
     font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #007bff;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
+    padding: 10px 20px;
     cursor: pointer;
   }
   
   .submit-button:hover {
-    background-color: #92a045;
+    background-color: #0056b3;
   }
-
-  .submit-button-container {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-  }
-  
