--- a/frontend/src/Components/post.css
+++ b/frontend/src/Components/post.css
@@ -298,3 +298,33 @@
     text-decoration: none;
     cursor: pointer;
 }
+
+.save-button, .cancel-button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.save-button:hover{
+    background-color: #45a049;
+}
+
+.cancel-button:hover {
+    background-color: #e00d0d;
+}
+
+.save-button {
+    background-color: #4CAF50;
+}
+
+.cancel-button {
+    background-color: #f44336;
+}
